--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "pinia": "^2.1.7",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
     "vue": "^3.4.21",
