--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
